--- a/index.html
+++ b/index.html
@@ -240,6 +240,6 @@
   <!-- ✅ New: Leaflet.js -->
 
 <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-  <script src="app.js"></script>
+  <script type="module" src="app.js"></script>
 </body>
 </html>
