--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB4IoUFBPNGtVySKpFoqE9VITvGV7nkLHw&callback=initMap"
     ></script> -->
   <!-- ✅ New: Leaflet.js -->
-  <script type="module" src="uiUtils.js"></script>
+<!--   <script type="module" src="uiUtils.js"></script> -->
   <script type="module" src="domReady.js"></script>
   <script type="module" src="storageMonitor.js"></script>
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
