--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
   <!-- ✅ New: Leaflet.js -->
 <!--   <script type="module" src="uiUtils.js"></script> -->
   <script type="module" src="domReady.js"></script>
-  <script type="module" src="storageMonitor.js"></script>
+<!--   <script type="module" src="storageMonitor.js"></script> -->
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script type="module" src="app.js"></script>
 </body>
