--- a/index.html
+++ b/index.html
@@ -255,6 +255,7 @@
     ></script> -->
   <!-- ✅ New: Leaflet.js -->
 <!--   <script type="module" src="uiUtils.js"></script> -->
+  <script type="module" src="db.js"></script>
   <script type="module" src="domReady.js"></script>
   <script type="module" src="storageMonitor.js"></script>
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
